--- a/leafletkml.html
+++ b/leafletkml.html
@@ -58,10 +58,10 @@
         }
         
         // Add the Bangladesh KML with a popup message at the center of Bangladesh
-    loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563]);
+    loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563], 'green');
 
     // Add the Utah KML with a popup message
-    loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735]);
+    loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735], 'red');
     </script>
 </body>
 </html>
