--- a/leafletkml.html
+++ b/leafletkml.html
@@ -73,10 +73,10 @@
         }
 
         // Add the Bangladesh KML with a blue color and popup message at the center of Bangladesh
-        loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563], 'blue');
+        loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563]);
 
         // Add the Utah KML with a red color and popup message
-        loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735], 'red');
+        loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735]);
     </script>
 </body>
 </html>
