--- a/leafletkml.html
+++ b/leafletkml.html
@@ -50,12 +50,12 @@
                     map.addLayer(track);
                     map.fitBounds(track.getBounds());
 
-                    // Apply custom styles to each polygon (we assume the KML contains polygons)
+                    // Apply custom styles to each polygon after loading KML
                     track.on('loaded', function() {
                         track.eachLayer(function(layer) {
                             if (layer instanceof L.Polygon) {
                                 layer.setStyle({
-                                    color: color,
+                                    color: color,  // Set the border color
                                     weight: 2,
                                     opacity: 1,
                                     fillOpacity: 0.5
@@ -72,11 +72,11 @@
                 .catch(err => console.error("Error loading KML: ", err));
         }
 
-        // Add the Bangladesh KML with a blue color and popup message at the center of Bangladesh
-        loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563]);
+        // Add the Bangladesh KML with a red color and popup message at the center of Bangladesh
+        loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563], 'red');
 
         // Add the Utah KML with a red color and popup message
-        loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735]);
+        loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735], 'blue');
     </script>
 </body>
 </html>
