--- a/leafletkml.html
+++ b/leafletkml.html
@@ -55,7 +55,7 @@
                         track.eachLayer(function(layer) {
                             if (layer instanceof L.Polygon) {
                                 layer.setStyle({
-                                    color: color,  // Set the border color
+                                    color: red,  // Set the border color
                                     weight: 2,
                                     opacity: 1,
                                     fillOpacity: 0.5
