--- a/leafletkml.html
+++ b/leafletkml.html
@@ -76,7 +76,7 @@
         loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563], 'red');
 
         // Add the Utah KML with a red color and popup message
-        loadKML('utah.kml', "<b>This is Utah.</b>", [39.320980, -111.093735], 'blue');
+        loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735], 'blue');
     </script>
 </body>
 </html>
