--- a/leafletkml.html
+++ b/leafletkml.html
@@ -66,7 +66,7 @@
                 .catch(err => console.error("Error loading KML: ", err));
         }
 
-        loadKML('bangladesh.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563]);
+        loadKML('bd.kml', "<b>This is Bangladesh.</b>", [23.685, 90.3563]);
         loadKML('utah.kml', "<b>This is Utah. It has an area of 84,899 square miles, which is 1.5 times the area of Bangladesh</b>", [39.320980, -111.093735]);
     </script>
 </body>
