--- a/leafletkml.html
+++ b/leafletkml.html
@@ -16,7 +16,7 @@
     <p>First, I used ArcGIS to prepare the polygons of my interests and created shapefiles. After that, I used a geoprocessing tool <strong>"Layer to KML"</strong>, where I gave the shapefile as an input and the tool generated a KML layer as an output. I opened the KML layer with Notepad++. Afterward, I created KML files and incorporated them into the HTML file.</p>
     <p>Here is the code I used to load the KML files into the Leaflet map:</p>
     <code>
-        function loadKML(file) {<br>
+       <c> function loadKML(file) {<br>
             fetch(file)<br>
             .then(res => res.text())<br>
             .then(kmltext => {<br>
@@ -27,7 +27,7 @@
                 map.fitBounds(track.getBounds());<br>
             })<br>
             .catch(err => console.error("Error loading KML: ", err));<br>
-        }
+        }</c>
     </code>
     <div id="map"></div>
     <script>
