--- a/CE514.html
+++ b/CE514.html
@@ -25,6 +25,7 @@
         <a href="unitconverter.html" target="_blank">A3 - Unit Converter for Linear Units</a>
         <a href="csslinks.html" target="_blank">A4 - CSS Styling Links</a>
         <a href="leafletanddistancenew.html" target="_blank">A5 - Build an Interactive Page with Leaflet Open Source Mapping</a>
+        <a href="leafletkml.html" target="_blank">A6 - Use KML in Leaflet</a>
     </div>
 </body>
 </html>
