--- a/hydroshare.html
+++ b/hydroshare.html
@@ -15,6 +15,15 @@
             width: 100%;
             height: 600px;
         }
+
+        pre {
+            background-color: black;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid white;
+            overflow-x: auto;
+        }
     </style>
 </head>
 <body>
@@ -83,7 +92,7 @@
         attribution: 'Hydroshare GeoServer'
     }).addTo(map);
     
-    L.tileLayer.wms('https://geoserver.hydroshare.org/geoserver/HS-53ed95e623f74c0996d048258afbe150/wms', {
+        L.tileLayer.wms('https://geoserver.hydroshare.org/geoserver/HS-53ed95e623f74c0996d048258afbe150/wms', {
         layers: 'HS-53ed95e623f74c0996d048258afbe150:UTAH',
         format: 'image/png',
         transparent: true,
@@ -97,7 +106,8 @@
         attribution: 'Hydroshare GeoServer'
     }).addTo(map);
     
-    Here, "53ed95e623f74c0996d048258afbe150" is my Hydroshare Resource ID.
+    <center>Here, "53ed95e623f74c0996d048258afbe150" is my Hydroshare Resource ID.</center>
+
     </code></pre>
 </body>
 </html>
