--- a/CE514.html
+++ b/CE514.html
@@ -26,6 +26,9 @@
         <a href="csslinks.html" target="_blank">A4 - CSS Styling Links</a>
         <a href="leafletanddistancenew.html" target="_blank">A5 - Build an Interactive Page with Leaflet Open Source Mapping</a>
         <a href="leafletkml.html" target="_blank">A6 - Use KML in Leaflet</a>
+        <a href="leafletkmlupdate.html" target="_blank">A6 - Use KML in Leaflet-Updated</a>
+        <a href="hydroshare.html" target="_blank">A7 - A Web Map for Viewing HydroShare Data</a>
+        
     </div>
 </body>
 </html>
