--- a/nwmapi.html
+++ b/nwmapi.html
@@ -292,7 +292,7 @@
       <li>Click "Get Forecast" to retrieve the streamflow data from the National Water Model.</li>
       <li>View the forecasted streamflow values over time in the table below the graph.</li>
       <li>The graph visualizes the streamflow forecast, showing the flow values for the specified reach ID.</li>
-      <li>Use the data and graph to understand the potential streamflow over the next few hours or days for water resource management.</li>
+      <li>Use the data and graph to understand the potential streamflow for short range.</li>
       <p>
       This web application uses the NOAA NWPS API to receive NWM short-range forecasts. The user inputs a Reach ID, which is a river segment's unique identification. The forecast data linked to the Reach ID is then requested by the application from the NOAA API. Following the retrieval of the data (time and streamflow numbers), a table is shown, and Chart.js is used to visualize the data in a chart. An alert message is shown to notify the user in the event that an error occurs during the API call or data processing.
       </p>
