--- a/nwmapi.html
+++ b/nwmapi.html
@@ -255,7 +255,7 @@
                 data: {
                     labels: timestamps,
                     datasets: [{
-                        label: `Streamflow Forecast for Reach ${reachId}`,
+                        label: `Streamflow Forecast (Short Range) for Reach ${reachId}`,
                         data: flowValues,
                         borderColor: 'blue',
                         borderWidth: 2,
