--- a/CE514.html
+++ b/CE514.html
@@ -28,7 +28,7 @@
         <a href="leafletkml.html" target="_blank">A6 - Use KML in Leaflet</a>
         <a href="leafletkmlupdate.html" target="_blank">A6 - Use KML in Leaflet-Updated</a>
         <a href="hydroshare.html" target="_blank">A7 - A Web Map for Viewing HydroShare Data</a>
-        
+        <a href="nwmapi.html" target="_blank">A8 - Retrieve and Plot Data from the US National Water Model</a>
     </div>
 </body>
 </html>
