--- a/nwmapi.html
+++ b/nwmapi.html
@@ -87,6 +87,14 @@
       box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     }
 
+/* Center the Table */
+table {
+  width: 80%;
+  margin: 20px auto; /* Centers the table horizontally */
+  border-collapse: collapse;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+    
     th, td {
       padding: 12px;
       border: 1px solid #ddd;
