--- a/nwmapi.html
+++ b/nwmapi.html
@@ -123,6 +123,22 @@
       display: block; /* Remove any unwanted margin/padding */
     }
 
+    /* Bigger Map */
+    .map-container {
+      width: 90%;
+      height: 500px; /* Increased height */
+      margin: 20px auto;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .map-container iframe {
+      width: 100%; 
+      height: 100%;
+      border: none; /* Remove border */
+    }
+
     /* "How it Works" Section */
     .how-it-works {
       background-color: #f8f9fa;
