--- a/project1.html
+++ b/project1.html
@@ -22,7 +22,7 @@
         }
         /* Left panel with background image */
         .left-panel {
-            background: url('background.jpg') no-repeat center center/cover; /* Change 'background.jpg' to your image */
+            background: url('hydropower1.jpg') no-repeat center center/cover; /* Change 'background.jpg' to your image */
             padding: 20px;
             border-radius: 10px;
             color: white;
@@ -83,9 +83,7 @@
         </div>
     </div>
 
-    <!-- Image Outside the Box -->
-    <img src="hydropower1.jpg" alt="Hydro Power Expansion for Duke Energy in South Carolina" class="outside-image">
-</div>
+    
 
 </body>
 </html>
