--- a/project3.html
+++ b/project3.html
@@ -97,13 +97,13 @@
     }
 
     table {
-  width: 60%;
-  margin: 20px auto;
+  width: 60%; /* You can adjust the width as needed */
+  margin: 20px auto; /* Centers the table horizontally */
   border-collapse: collapse;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
   background-color: #333; /* Slightly lighter dark background for the table */
+  text-align: center; /* Ensures text is centered inside the table */
 }
-
 th, td {
   padding: 10px;
   border: 1px solid #555; /* Lighter border for better visibility */
