--- a/projectv6.html
+++ b/projectv6.html
@@ -215,15 +215,15 @@ tr:hover {
 
 <!-- Reach ID buttons -->
 <div id="reachButtons">
-  <button onclick="getForecastFromButton('9090086')">Reach 9090086</button>
-  <button onclick="getForecastFromButton('9090088')">Reach 9090088</button>
-  <button onclick="getForecastFromButton('9090122')">Reach 9090122</button>
-  <button onclick="getForecastFromButton('9090124')">Reach 9090124</button>
-  <button onclick="getForecastFromButton('9090132')">Reach 9090132</button>
-  <button onclick="getForecastFromButton('9090136')">Reach 9090136</button>
-  <button onclick="getForecastFromButton('9090138')">Reach 9090138</button>
-  <button onclick="getForecastFromButton('9090262')">Reach 9090262</button>
-  <button onclick="getForecastFromButton('9090922')">Reach 9090922</button>
+  <button onclick="getForecastFromButton('9090086');  individualReachOnMap('9090086');">Reach 9090086</button>
+  <button onclick="getForecastFromButton('9090088');  individualReachOnMap('9090088');">Reach 9090088</button>
+  <button onclick="getForecastFromButton('9090122');  individualReachOnMap('9090122');">Reach 9090122</button>
+  <button onclick="getForecastFromButton('9090124');  individualReachOnMap('9090124');">Reach 9090124</button>
+  <button onclick="getForecastFromButton('9090132');  individualReachOnMap('9090132');">Reach 9090132</button>
+  <button onclick="getForecastFromButton('9090136');  individualReachOnMap('9090136');">Reach 9090136</button>
+  <button onclick="getForecastFromButton('9090138');  individualReachOnMap('9090138');">Reach 9090138</button>
+  <button onclick="getForecastFromButton('9090262');  individualReachOnMap('9090262');">Reach 9090262</button>
+  <button onclick="getForecastFromButton('9090922');  individualReachOnMap('9090922');">Reach 9090922</button>
 </div>
   <!-- Forecast Type Dropdown (Moved here) -->
 <label for="ForecastType">Select a forecast:</label>
@@ -232,6 +232,8 @@ tr:hover {
   <option value="medium_range">Medium Range</option>
   <option value="long_range">Long Range</option>
 </select>
+
+
 
 <!-- Timeseries Data Table -->
 <table id="timeseries-datatable" style="display: none">
@@ -247,6 +249,7 @@ tr:hover {
 <!-- Streamflow Chart -->
 <canvas id="streamflowChart"></canvas>
 <script>
+
     // Initialize the map centered on South Carolina
     var map = L.map('map').setView([33.7000, -79.8520], 10); 
 
@@ -474,6 +477,15 @@ const reachThresholds = {
     backgroundColor: '#ffffff'  // Light background for the chart itself
   }
 });
+
+var individualLayer = "";
+function individualReachOnMap(reachId) {
+	if (individualLayer != "") {map.removeLayer(individualLayer);};
+	const reachLayer = eval("Layer" + reachId);
+	reachLayer.addTo(map);
+	individualLayer = reachLayer;
+
+}
 
     function getForecastFromButton(reachId) {
       const type = document.getElementById('ForecastType').value;
